--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,12 @@
     }],
     "import/prefer-default-export": "off",
     "no-use-before-define": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true
+      }
+    ],
     //"prettier/prettier": "error",
     "import/extensions": [
       "error",
