--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
   ],
   "rules": {
     "camelcase": "off",
+    "react/sx-one-expression-per-line": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
